--- a/package.json
+++ b/package.json
@@ -5,5 +5,6 @@
     "unity": "2020.1",
     "description": "JsonDiffPatch.NET, imported from NuGet",
     "dependencies": {
+        "com.unity.nuget.newtonsoft-json": "2.0.0"
     }
 }
